Style add background color and image

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -16,7 +16,7 @@ $separation: 5rem;
 
 // Fonts
 
-$thin: 300;
-$regular: 400;
-$bold: 700;
-$black: 900;
+$thinFont: 300;
+$regularFont: 400;
+$boldFont: 700;
+$blackFont: 900;
