Style change background-color tab

--- a/src/scss/layout/_tabs.scss
+++ b/src/scss/layout/_tabs.scss
@@ -10,6 +10,11 @@
     border: none;
     border-radius: 5rem;
 
+    &.current {
+      background-color: $blue;
+      color: $white;
+    }
+
     &:hover {
       cursor: pointer;
     }
