Style form and validation summary

--- a/src/scss/layout/_paging.scss
+++ b/src/scss/layout/_paging.scss
@@ -13,6 +13,8 @@
     font-weight: $boldFont;
     text-transform: uppercase;
     font-size: 2rem;
+    border-radius: 2rem;
+    outline: none;
 
     &.hide {
       visibility: hidden;
